# helpdesk-api

./: .env-example  README.md  base_dockerfile  dockerfile  pyproject.toml
api/: app.py  server.py
api/decorators/: require_login.py  require_role.py
api/endpoints/: __init__.py
api/endpoints/api/: files.py  ping.py
api/endpoints/api/admin/: staff.py
api/endpoints/api/auth/: callback.py  entra.py
api/endpoints/api/me/: create.py  register.py  root.py
api/endpoints/api/options/: category.py  severity.py  sla.py  staff.py
api/endpoints/api/tickets/: info.py  messages.py  ref.py  root.py  status.py
api/mayim/: category_executor.py  file_executor.py  message_executor.py  severity_executor.py  sla_executor.py  statistics_executor.py  system_executor.py  team_executor.py  ticket_executor.py  user_executor.py
api/mayim/queries/SLAs/: create_sla.sql  delete_sla.sql  get_all_slas.sql  get_sla_by_id.sql
api/mayim/queries/categories/: create_category.sql  create_subcategory.sql  delete_category.sql  delete_subcategory.sql  get_categories_with_children.sql  get_category_by_id.sql  get_subcategories.sql  get_subcategory_by_id.sql
api/mayim/queries/files/: add_file.sql  delete_file.sql  get_file_by_id.sql  update_file_storage.sql
api/mayim/queries/messages/: create_message_with_file_id.sql  create_text_message.sql  get_messages.sql
api/mayim/queries/severity/: create_severity.sql  delete_severity.sql  get_all_severity_levels.sql  get_severity_by_id.sql
api/mayim/queries/tickets/: close_ticket.sql  (+14 more)
api/models/: enums.py
api/models/db/: category.py  config.py  file.py  message.py  message_author.py  severity.py  sla.py  statistics.py  subcategory.py  ticket.py  user.py
api/models/internal/: jwt_data.py
api/models/requests/: category_form.py  category_options_query.py  deletion_post.py  message_form.py  message_query_params.py  register_form.py  severity_post.py  sla_post.py  staff_post.py  staff_query.py  ticket_assignee_form.py  ticket_form.py  ticket_status_form.py  ticket_update_form.py  tickets_query.py
(+35 files in other folders)
