[tool.poetry]
name = "helpdesk-api"
version = "0.1.0"
description = "The Backend API powering the Helpdesk"
authors = ["Alphaspiderman <68412330+Alphaspiderman@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
sanic = {extras = ["ext"], version = "^24.6.0"}
PyJWT = {extras = ["crypto"], version = "^2.9.0"}
aiohttp = "^3.10.8"
taskipy = "^1.13.0"
sanic-ext = "^23.12.0"
mayim = {extras = ["postgres"], version = "^1.1.0"}

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.8.0"
pre-commit = "^3.8.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
